Cobbler CHANGELOG
(all entries mdehaan@redhat.com unless noted otherwise)

- ??? - 1.1.0
- devel branch
- added cobbler aclsetup command for running cobbler as non-root
- added cobbler find command to do searches from the command line
- fix mkdir invocation

- Wed Jun 03 2008 - 1.0.3
- Fix error message output from failed kickstart rendering
- manpage edits

- Tue Jun 03 2008 - 1.0.1
- Fix misformatted warning in "check"
- Do not have RPM own tftpboot, just generate files in TFTP dir as detected
- Default arches to 'i386' not 'x86' for consistency, esp. in import
- When querying kickstart templates, do not return directories
- Make triggers for add/delete work for renames and copies (same triggers)
- Do not cache snippets so they can be tweaked w/o starting the service
- Make manpage reference /etc/cobbler/settings, not /var/lib
- Added manage_forward_zones/manage_reverse_zones to included config file
- Fix python double-use-of-parameter error

- Mon May 12 2008 - 0.9.2
- run createrepo with less preconditions during cobbler reposync
- doc upgrades and error handling for "cobbler replicate"
- improved error message that occurs when copying from nfs w/ rootsquash
- mac duplication checking improvements for CLI
- add warning to cobbler check if selinux is on and Apache boolean not set
- added warning to cobbler check if templates use the default password
- setting per-system kickstart template to "" or "delete" restores inheritance
- if repos in profiles no longer exist, remove noisy warning, move to "check"
- move warning about reposync to check also (check is more useful at runtime now)
- build pxe trees for systems even if interface0 is undefined
- add sync() back into XMLRPC API, missing in 0.9.1
- added 'distro_name', 'profile_name', and 'system_name' to generated template vars
- it's now possible to undefine a --ksmeta or kopts symbol defined in a parent with "!foo"
- log errors while rendering kickstarts
- comments added to the config file, neat!